--- a/pivot-drilldown-and-plot/src/package.json
+++ b/pivot-drilldown-and-plot/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DCS pivot-and-drill prototype-1",
+  "name": "wcs-prototype-2",
   "description": "Demos a multi dimension data table that supports pivot, drilldown & export functionality, with a supporting chart.\n",
   "dependencies": {
     "react-dom": "16",
